--- a/Hard.html
+++ b/Hard.html
@@ -16,7 +16,7 @@
   <body>
     <p class="dark">Темная</p>
     <p class="bright">Светлая</p>
-    <button class="rule">Правила 123</button>
+    <button class="rule">Правила</button>
     <dialog class="descriptionWindow">
       <p class="description">
         После нажатия кнопки "Начать" на игровом поле появится красный(белый) шарик,
